--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,13 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		
+  <dependency>
+      <groupId>com.openshift</groupId>
+      <artifactId>openshift-java-client</artifactId>
+      <version>2.7.0.Final</version>
+  </dependency>
+
 	</dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
