--- a/pom.xml
+++ b/pom.xml
@@ -208,15 +208,22 @@
 <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
 	<id>openshift</id>
 	<build>
+	
 		<finalName>SpringSQLTom</finalName>
 		<plugins>
 			<plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.4</version>
        <configuration>
+          <warSourceDirectory>WebContent</warSourceDirectory>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
+        <outputDirectory>deployments</outputDirectory>
+        <warName>ROOT</warName>
+        </configuration>
+     <!--   <configuration>
          <outputDirectory>webapps</outputDirectory>
          <warName>ROOT</warName>
-       </configuration>
+       </configuration> -->
      </plugin>
 
 		</plugins>
