--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
 	</properties>
 
 	<dependencies>
+	<dependency>
+	<groupId>com.fasterxml.jackson.dataformat</groupId>
+	<artifactId>jackson-dataformat-xml</artifactId>
+	<version>2.4.2</version>
+</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
