--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
 	<artifactId>jackson-dataformat-xml</artifactId>
 	<version>2.4.2</version>
 </dependency>
+<dependency>
+  <groupId>org.codehaus.woodstox</groupId>
+  <artifactId>woodstox-core-asl</artifactId>
+  <version>4.4.1</version>
+</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
